[package]
name = "module-aggregated-dex"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
orml-traits = { path = "https://github.com/AcalaNetwork/predeploy-contracts", rev = "c3d63f524ddbe75f4c22ba0e06ae3bf57300b402", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "selendra-primitives", path = "../../primitives", default-features = false }
module-stable-asset = { path = "../stable-asset", version = "0.1.0", default-features = false }
module-dex = { package = "module-dex", path = "../dex", default-features = false }
orml-tokens = { path = "https://github.com/AcalaNetwork/predeploy-contracts", rev = "c3d63f524ddbe75f4c22ba0e06ae3bf57300b402" , default-features = false }

[dev-dependencies]
orml-tokens = { path = "https://github.com/AcalaNetwork/predeploy-contracts", rev = "c3d63f524ddbe75f4c22ba0e06ae3bf57300b402" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-tokens/std",
	"support/std",
	"primitives/std",
	"module-stable-asset/std",
	"module-dex/std",
]
try-runtime = ["frame-support/try-runtime"]
